bpo-37405: socket.getsockname() returns string instead of tuple